# macaw

./: .gitignore  .repo.toml  CLAUDE.md  Cargo.toml  README.md  fnox.toml  justfile
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  rust.yml  verify.yaml
docs/: database-schema.md  erd.md  schema.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/opensrs/: auth.rs  client.rs  domain.rs  error.rs  mod.rs  types.rs  xml.rs
