[package]
name = "macaw"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
ureq = { version = "3.0", features = ["json", "native-tls"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
md-5 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "macaw"
path = "src/lib.rs"

[[bin]]
name = "macaw"
path = "src/main.rs"
